--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,79 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+header{
+    background-image: url(../img/header_bg.jpg);
+    background-size: cover;
+    height: 800px;
+}
+.logo_menu_area{
+    height: 150px;
+    background: #0000006e;
+}
+.logo_area h2{
+    font-size: 42px;
+    text-transform: uppercase;
+    margin-top: 63px;
+    font-weight: 600;
+    color: #fff;
+}
+.e_logo{
+    color: #4bcaff;
+}
+.slide_area{
+    margin-top: 258px;
+    text-align: center;
+}
+.menu_area{
+    margin-top: 58px;
+}
+.menu_area nav ul li{
+    padding: 0px 2px;
+}
+.menu_area nav ul li a{
+    padding: 13px 20px;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 14px;
+    position: relative;
+}
+.menu_area nav ul li a::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #4bcaff;
+    opacity: 0;
+}
+.menu_area nav ul li a:hover{
+    background: transparent;
+    color: #4bcaff;
+}
+.menu_area nav ul li a:hover::before{
+    background: transparent;
+    color: #4bcaff;
+    opacity: 1;
+}
+.menu_area nav ul li .active{
+    background: transparent;
+    color: #4bcaff;
+}
+.menu_area nav ul li.active a::before{
+    opacity: 1;
+}
 
+.slide_area h2{
+    font-size: 42px;
+    line-height: 42px;
+    background: #0000008c;
+    display: inline-block;
+    color: #fff;
+    padding: 10px 15px;
+    margin: 5px;
+}
 
 
 /* ==========================================================================
