--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,46 @@ header{
 .portfolio_img_one:hover::before{
     opacity: 1;
 }
+.video_info_full{
+    padding-top: 78px;
+    padding-bottom: 74px;
+}
+.video_info{
+    background: #515f67;
+    color: #fff;
+}
+.video_content h2{
+    font-size: 33px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+.video_content p{
+    font-size: 14px;
+    margin-bottom: 34px;
+}
+.video_button{
+    background: transparent;
+    color: black;
+    border: 2px solid black;
+    border-radius: 4px;
+    padding: 11px 33px;
+    text-transform: uppercase;
+}
+.video_button:hover{
+    background: transparent;
+    color: black;
+    border: 2px solid black;
+    border-radius: 4px;
+    padding: 11px 33px;
+}
+.video_section{
+    float: right;
+    margin-right: 37px; 
+}
+.youtube{
+    width: 570px;
+    height: 380px;
+}
 
 /* ==========================================================================
    Helper classes
