--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,51 @@ header{
     font-size: 25px;
     color: #fff;
 }
-
+.about{
+    background-image: url(../img/middle_bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 505px;
+}
+.right_side_content{
+    margin-top: 94px;
+    font-size: 14px;
+    line-height: 25px; 
+}
+.left_area{
+    margin-top: 99px;
+    margin-bottom: 174px;
+    color: #fff;
+}
+.left_area h2{
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    font-size: 30px;   
+}
+.left_area p{
+    font-size: 14px;
+    line-height: 25px;   
+}
+.right_area{
+    margin-top: 99px;
+    margin-bottom: 174px;
+    color: #fff;
+}
+.rignt_side_icon i{
+    font-size: 30px;
+    padding: 10px;
+    border: 2px solid white;
+    color: #fff;
+}
+.rignt_side_icon i:hover{
+    font-size: 30px;
+    padding: 10px;
+    border: 2px solid white;
+    color: #fff;
+}
+.icon_one{
+    margin-left: 10px;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
